@@ -29,6 +29,7 @@ Framework.</description>
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
+* [jan] Officially support PHP 7.
 * Initial release.
  </notes>
  <contents>
@@ -252,8 +253,8 @@ Framework.</description>
   <required>
    <php>
     <min>5.3.0</min>
-    <max>6.0.0alpha1</max>
-    <exclude>6.0.0alpha1</exclude>
+    <max>8.0.0alpha1</max>
+    <exclude>8.0.0alpha1</exclude>
    </php>
    <pearinstaller>
     <min>1.7.0</min>
@@ -404,6 +405,7 @@ Framework.</description>
    <date>2016-12-21</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
+* [jan] Officially support PHP 7.
 * Initial release.
    </notes>
   </release>
